--- a/New_user.html
+++ b/New_user.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-  <div class = "container">
+  <div class = "container-fluid">
     <div class = "page-header">
       <h1>Banking System</h1>
       <p>Live your life ....!</p>
