--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
    <div class = "container-fluid">
      <div class = "page-header">
-      <h1>Banking System</h1>
-      <p>Live your life ....!</p>
+      <h1><img src="images/download.jpg" alt="image" width ="70" height="70">I-Banking</h1>
+      <p style="color:red">Live your life ....!</style></p>
      </div>
 	<ul class = "nav nav-tabs" style= "color:black">
        <li class = "active"><a href="#"><img src="images/home.png" alt="home" width="30" height="30"></img></a></li>
