--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
 		<li><a href="#">Pay Online</a></li>
         <li><a href="#">Career</a></li>
          <li><a href="#">Contact_Us</a></li>
+		 <li><a href="#">Net Banking</a></li>
+		   <li class ="dropdown">
+            <a class ="dropdown-toggle" data-toggle="dropdown" href="#">About_Us<span class ="caret"></span></a>
+            <ul class ="dropdown-menu">
+            <li><a href="#">What we do</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Our Team</a></li>
+            <li><a href="#">Benefits</a></li>
+            </ul>
+          </li>
+		  
 		  <button type="button" class = "btn btn-success btn-lg"onclick = "location.href='new_user.html'">Sign Up!</button>
 	      <button type="button" class = "btn btn-danger btn-lg" onclick ="location.href='login_page.html'">Sign In!</a></button>
      </ul>		 
