--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
    <div class = "container-fluid">
-     <div class = "page-header">
-      <h1><img src="images/download.jpg" alt="image" width ="70" height="70">I-Banking</h1>
+     <div class = "page-header" >
+      <h1>I-Banking</h1>
       <p style="color:red">Live your life ....!</style></p>
      </div>
-	<ul class = "nav nav-tabs" style= "color:black">
+	<ul class = "nav nav-tabs">
        <li class = "active"><a href="#"><img src="images/home.png" alt="home" width="30" height="30"></img></a></li>
         <li class ="dropdown">
             <a class ="dropdown-toggle" data-toggle="dropdown" href="#">Services<span class ="caret"></span></a>
@@ -51,11 +51,10 @@
             <li><a href="#">Benefits</a></li>
             </ul>
           </li>
-		  
 		  <button type="button" class = "btn btn-success btn-lg"onclick = "location.href='new_user.html'">Sign Up!</button>
 	      <button type="button" class = "btn btn-danger btn-lg" onclick ="location.href='login_page.html'">Sign In!</a></button>
      </ul>		 
-	 <br>
+	 <br><br>
 	  <div class="row">
   <div class="col-md-4">
     <a href="images/service.jpg" class="thumbnail">
